--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,17 @@ h1 {
     text-decoration: underline;
 }
 
-#clock {
+h2 {
     margin: 50px auto;
+}
+
+h3 {
+    font-size: 100%;
+    font-weight: bold;
+}
+
+.question {
+    margin: 25px auto;
 }
 
 .choice {
