--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,27 +5,70 @@ body {
 }
 
 .mainContent {
-    margin: 0 auto;
+    width: 100%;
     text-align: center;
+    margin: 0 auto;
+    display: none;
+}
+
+#bannerImg {
+    display: block;
+    margin: 0 auto;
+    width:70%;
+}
+
+#clock {
+    font-size: 200%;
+}
+
+.triviaArea {
+    margin: 0 auto;
+    font-size: 150%;
+    width: 75%;
 }
 
 h1 {
-    text-decoration: underline;
+    margin-top: 20px;
+    margin-bottom: 50px;
 }
 
 h2 {
-    margin: 50px auto;
+    line-height: 1.5;
 }
 
-h3 {
-    font-size: 100%;
-    font-weight: bold;
+.answerChoices {
+    text-align: left;
+    list-style-position: outside;
+    margin: 15px auto;
 }
 
 label {
-    margin: 0 15px;
+    margin: 15px 15px 15px 0;
 }
 
 input {
-    margin: 0 10px;
+    margin: 15px;
+    vertical-align: 4px;
+}
+
+p {
+    margin: 15px 0;
+}
+
+.buttonDiv {
+    margin-top: 25px;
+    text-align: center;
+}
+
+button {
+    font-size: 225%;
+}
+
+/* Sets cursor to pointer on hover of selections */
+button:hover, label:hover {
+    cursor: pointer;
+}
+
+#restartBtn {
+    display: none;
 }
